<resources>
    <string name="app_name">Idea</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_label">List</string>
    <string name="list_fragment_label">List Fragment</string>
    <string name="detail_fragment_label">Detail Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movie_text">Star Wars: Episode VI - Return of the Jedi</string>
    <string name="year_text">1999</string>
    <string name="rating_text">9.2</string>
    <string name="movie_text_2">The Shawshank Redemption</string>
    <string name="director_text">by Frank Darabont</string>
    <string name="overview">Overview</string>
    <string name="description">Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</string>
    <string name="writes_text">Writers :Stephen King (based on the short novel Rita Hayworth and the Shawshank Redemption by), Frank Darabont (screenplay by)</string>
    <string name="drama">Drama</string>
    <string name="imdb_top_100_movies">IMDb Top 100 Movies</string>
</resources>