<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movieItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/corner_background">

    <TextView
        android:id="@+id/movieNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/movie_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/year_text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/movieNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/movieNameTextView" />

    <ImageView
        android:id="@+id/starImage"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@drawable/ic_star"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingText"
        app:layout_constraintEnd_toStartOf="@+id/ratingText"
        app:layout_constraintTop_toTopOf="@+id/ratingText" />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/rating_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yearTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>